--- a/ext/mixed/css/display.css
+++ b/ext/mixed/css/display.css
@@ -115,12 +115,14 @@
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: var(--font-size);
     line-height: var(--line-height);
+    height: 100%;
 }
 body {
     margin: 0;
     border: 0;
     padding: 0;
-    overflow-y: scroll; /* always show scroll bar */
+    height: 100%;
+    overflow: hidden;
     background-color: var(--background-color);
     color: var(--default-text-color);
     font-size: inherit;
@@ -149,6 +151,24 @@ a {
     color: var(--popuplar-kanji-text-color);
     text-decoration: underline;
     cursor: pointer;
+}
+
+
+/* Main layout */
+.content {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-flow: row nowrap;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    position: relative;
+    align-items: stretch;
+    justify-content: center;
+}
+.content-body {
+    flex: 1 1 auto;
+    height: 100%;
 }
 
 
