--- a/ext/mixed/css/display.css
+++ b/ext/mixed/css/display.css
@@ -240,15 +240,16 @@ a {
 .content {
     width: 100%;
     height: 100%;
-    display: flex;
-    flex-flow: column nowrap;
     position: relative;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    grid-template-areas: "main";
+    justify-items: stretch;
     align-items: stretch;
-    justify-content: flex-start;
 }
 .content-scroll {
-    width: 100%;
-    height: 100%;
+    grid-area: main;
     display: flex;
     flex-flow: column nowrap;
     overflow-x: hidden;
